--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
     <main>
         <header>
-            <h1> Título do site</h1>
+            <h1> Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de html 5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptates ut maiores harum nisi eligendi aut totam sed minus repellendus nulla sunt, suscipit placeat aliquam quaerat quod repudiandae incidunt reprehenderit.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript
+            </h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate amet perspiciatis a pariatur minus doloribus debitis enim maiores veritatis, exercitationem asperiores. Inventore assumenda sunt alias laudantium ratione iusto nulla fuga.</p>
         </article>
     </main>
     
