--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <main>
         <header>
             <h1> Cursos grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em vídeo">
         </header>
         <article>
             <h2>Curso de html 5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Html e CSS3">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptates ut maiores harum nisi eligendi aut totam sed minus repellendus nulla sunt, suscipit placeat aliquam quaerat quod repudiandae incidunt reprehenderit.</p>
         </article>
         <article>
             <h2>Curso de JavaScript
             </h2>
+            <img class="lado"  src="imagens/curso-javascript.png" alt="JS">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate amet perspiciatis a pariatur minus doloribus debitis enim maiores veritatis, exercitationem asperiores. Inventore assumenda sunt alias laudantium ratione iusto nulla fuga.</p>
         </article>
     </main>
