--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
         <article>
             <h2>Curso de html 5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Html e CSS3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptates ut maiores harum nisi eligendi aut totam sed minus repellendus nulla sunt, suscipit placeat aliquam quaerat quod repudiandae incidunt reprehenderit.</p>
+            <p><abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para criação de sites. Atualmente na versão 5, ela usa uma semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configuração visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript
             </h2>
             <img class="lado"  src="imagens/curso-javascript.png" alt="JS">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate amet perspiciatis a pariatur minus doloribus debitis enim maiores veritatis, exercitationem asperiores. Inventore assumenda sunt alias laudantium ratione iusto nulla fuga.</p>
+            <p><abbr title="JavaScript">JavaScript</abbr>É uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso <abbr title="Document Object Mode! ">DOM</abbr> aos elementos HTML por meio do ></p>
+            <p><a href="curso-js.html">Acesso o curso de JavaScript</a></p>
         </article>
     </main>
     
